Add gitignore files

--- a/final_tech_report.ipynb
+++ b/final_tech_report.ipynb
@@ -6,9 +6,106 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dependencies\n",
     "import pandas as pd\n",
-    "from sqlalchemy import create_engine"
+    "from sqlalchemy import create_engine\n",
+    "from census import Census\n",
+    "\n",
+    "# Import Census API Key and postgresql database password\n",
+    "from config import (api_key, password)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use Census API to get social economic data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = Census(api_key, year=2018)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run Census Search to retrieve data on all zip codes (2013 ACS5 Census)\n",
+    "# See: https://github.com/CommerceDataService/census-wrapper for library documentation\n",
+    "# See: https://gist.github.com/afhaque/60558290d6efd892351c4b64e5c01e9b for labels\n",
+    "census_data = c.acs5.get((\"NAME\", \"B19013_001E\", \"B01003_001E\", \"B01002_001E\",\n",
+    "                          \"B19301_001E\",\n",
+    "                          \"B17001_002E\",\n",
+    "                          \"B23025_005E\"), {'for': 'zip code tabulation area:*'})\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "census_pd = pd.DataFrame(census_data)\n",
+    "\n",
+    "# Column Reordering\n",
+    "census_pd = census_pd.rename(columns={\"B01003_001E\": \"Population\",\n",
+    "                                      \"B01002_001E\": \"Median Age\",\n",
+    "                                      \"B19013_001E\": \"Household Income\",\n",
+    "                                      \"B19301_001E\": \"Per Capita Income\",\n",
+    "                                      \"B17001_002E\": \"Poverty Count\",\n",
+    "                                      \"B23025_005E\": \"Unemployment Count\",\n",
+    "                                      \"NAME\": \"Name\", \"zip code tabulation area\": \"zip_code\"})\n",
+    "\n",
+    "# # Add in Poverty Rate (Poverty Count / Population)\n",
+    "# census_pd[\"Poverty Rate\"] = 100 * \\\n",
+    "#     census_pd[\"Poverty Count\"].astype(\n",
+    "#         int) / census_pd[\"Population\"].astype(int)\n",
+    "\n",
+    "# # Add in Unemployment Rate (Unemployment Count / Population)\n",
+    "# census_pd[\"Unemployment Rate\"] = 100 * \\\n",
+    "#     census_pd[\"Unemployment Count\"].astype(\n",
+    "#         int) / census_pd[\"Population\"].astype(int)\n",
+    "\n",
+    "# # Final DataFrame\n",
+    "# census_pd = census_pd[[\"zip_code\", \"Name\", \"Population\", \"Median Age\", \"Household Income\",\n",
+    "#                        \"Per Capita Income\", \"Poverty Count\", \"Poverty Rate\", \"Unemployment Rate\"]]\n",
+    "\n",
+    "# # Visualize\n",
+    "# print(len(census_pd))\n",
+    "\n",
+    "census_pd.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save as a csv\n",
+    "# Note to avoid any issues later, use encoding=\"utf-8\"\n",
+    "census_pd.to_csv(\"census_data.csv\", encoding=\"utf-8\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
