Try to use lat and long to ZCTA but not working

--- a/Tracey_draft_code.ipynb
+++ b/Tracey_draft_code.ipynb
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
        "4  http://www.steaknshake.com/locations/23851-ste...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -626,8 +626,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Source: https://www.udsmapper.org/zcta-crosswalk.cfm"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +741,7 @@
        "4      Zip Matches ZCTA  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +790,7 @@
        "41106"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +810,7 @@
        "33167"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1047,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1072,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1076,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1125,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1470,7 @@
        "9752  28.410214  -81.424830       32816     32816  32826    10  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1471,65 +1478,6 @@
    "source": [
     "final_restaurant_df[final_restaurant_df[\"diff\"]!=0]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Lat and Long to ZCTA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lat_long_zcta = pd.read_csv(\"data/US_ZCTA_LAT_LONG_population_density.csv\")\n",
-    "lat_long_zcta.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
