Create folders and files

--- a/Tracey_draft_code.ipynb
+++ b/Tracey_draft_code.ipynb
@@ -549,6 +549,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.reddit.com/r/explainlikeimfive/comments/6284le/eli5_what_are_those_numbers_after_the_dash_in_zip/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -629,7 +636,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Source: https://www.udsmapper.org/zcta-crosswalk.cfm"
+    "Why https://en.wikipedia.org/wiki/ZIP_Code_Tabulation_Area\n",
+    "<br> https://acsdatacommunity.prb.org/acs-data-products--resources/american-factfinder/f/3/t/427\n",
+    "<br> https://atcoordinates.info/2020/05/11/the-trouble-with-zip-codes-solutions-for-data-analysis-and-mapping/\n",
+    "<br>Source: https://www.udsmapper.org/zcta-crosswalk.cfm"
    ]
   },
   {
@@ -752,6 +762,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Add 0 to ....\n",
+    "for index, value in zip_to_zcta.iterrows():\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -778,6 +799,11 @@
    "source": [
     "zip_to_zcta_df.info()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1478,6 +1504,41 @@
    "source": [
     "final_restaurant_df[final_restaurant_df[\"diff\"]!=0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
