--- a/Tracey_draft_code.ipynb
+++ b/Tracey_draft_code.ipynb
@@ -1643,7 +1643,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:PythonData] *",
+   "display_name": "Python [conda env:PythonData]",
    "language": "python",
    "name": "conda-env-PythonData-py"
   },
@@ -1657,7 +1657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   },
   "toc": {
    "base_numbering": 1,
