Cleansing of zip/zcta file

--- a/02_transform_zip_zcta/02_transform_zip_zcta_tracey_kat.ipynb
+++ b/02_transform_zip_zcta/02_transform_zip_zcta_tracey_kat.ipynb
@@ -14,13 +14,380 @@
     "\n",
     "# Do some merging here between zip_zcta and the restaurant tables to show that they can be matched against the zip_code (don't need to export to table)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dependencies\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import ZIP to ZCTA conversion table. All fields were imported as string to ensure the ZIP Codes retains the \"00\" prefixes \n",
+    "zip_to_zcta_df = pd.read_excel(\"../00_input/zip_to_zcta_2019.xlsx\", dtype = 'str')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ZIP_CODE</th>\n",
+       "      <th>PO_NAME</th>\n",
+       "      <th>STATE</th>\n",
+       "      <th>ZIP_TYPE</th>\n",
+       "      <th>ZCTA</th>\n",
+       "      <th>zip_join_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00501</td>\n",
+       "      <td>Holtsville</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>Post Office or large volume customer</td>\n",
+       "      <td>11742</td>\n",
+       "      <td>Spatial join to ZCTA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00544</td>\n",
+       "      <td>Holtsville</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>Post Office or large volume customer</td>\n",
+       "      <td>11742</td>\n",
+       "      <td>Spatial join to ZCTA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00601</td>\n",
+       "      <td>Adjuntas</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>Zip Code Area</td>\n",
+       "      <td>00601</td>\n",
+       "      <td>Zip Matches ZCTA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00602</td>\n",
+       "      <td>Aguada</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>Zip Code Area</td>\n",
+       "      <td>00602</td>\n",
+       "      <td>Zip Matches ZCTA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00603</td>\n",
+       "      <td>Aguadilla</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>Zip Code Area</td>\n",
+       "      <td>00603</td>\n",
+       "      <td>Zip Matches ZCTA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  ZIP_CODE     PO_NAME STATE                              ZIP_TYPE   ZCTA  \\\n",
+       "0    00501  Holtsville    NY  Post Office or large volume customer  11742   \n",
+       "1    00544  Holtsville    NY  Post Office or large volume customer  11742   \n",
+       "2    00601    Adjuntas    PR                         Zip Code Area  00601   \n",
+       "3    00602      Aguada    PR                         Zip Code Area  00602   \n",
+       "4    00603   Aguadilla    PR                         Zip Code Area  00603   \n",
+       "\n",
+       "          zip_join_type  \n",
+       "0  Spatial join to ZCTA  \n",
+       "1  Spatial join to ZCTA  \n",
+       "2      Zip Matches ZCTA  \n",
+       "3      Zip Matches ZCTA  \n",
+       "4      Zip Matches ZCTA  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check the ZIP/ZCTA dataframe data, particularly for retention of \"00\" for ZIP Codes\n",
+    "zip_to_zcta_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 41107 entries, 0 to 41106\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column         Non-Null Count  Dtype \n",
+      "---  ------         --------------  ----- \n",
+      " 0   ZIP_CODE       41107 non-null  object\n",
+      " 1   PO_NAME        41107 non-null  object\n",
+      " 2   STATE          41106 non-null  object\n",
+      " 3   ZIP_TYPE       41107 non-null  object\n",
+      " 4   ZCTA           41107 non-null  object\n",
+      " 5   zip_join_type  41107 non-null  object\n",
+      "dtypes: object(6)\n",
+      "memory usage: 1.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Review data types in ZIP/ZCTA dataframe\n",
+    "zip_to_zcta_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ZIP_CODE</th>\n",
+       "      <th>ZCTA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00501</td>\n",
+       "      <td>11742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00544</td>\n",
+       "      <td>11742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00601</td>\n",
+       "      <td>00601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00602</td>\n",
+       "      <td>00602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00603</td>\n",
+       "      <td>00603</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41102</th>\n",
+       "      <td>96943</td>\n",
+       "      <td>No ZCTA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41103</th>\n",
+       "      <td>96944</td>\n",
+       "      <td>No ZCTA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41104</th>\n",
+       "      <td>96960</td>\n",
+       "      <td>No ZCTA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41105</th>\n",
+       "      <td>96970</td>\n",
+       "      <td>No ZCTA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41106</th>\n",
+       "      <td>96898</td>\n",
+       "      <td>No ZCTA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>41107 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ZIP_CODE     ZCTA\n",
+       "0        00501    11742\n",
+       "1        00544    11742\n",
+       "2        00601    00601\n",
+       "3        00602    00602\n",
+       "4        00603    00603\n",
+       "...        ...      ...\n",
+       "41102    96943  No ZCTA\n",
+       "41103    96944  No ZCTA\n",
+       "41104    96960  No ZCTA\n",
+       "41105    96970  No ZCTA\n",
+       "41106    96898  No ZCTA\n",
+       "\n",
+       "[41107 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove unnecessary columns to refine dataset\n",
+    "zip_to_zcta_df.drop(columns=['PO_NAME', 'STATE', 'ZIP_TYPE', 'zip_join_type'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41106"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Identify any duplicated ZIP Codes as all ZIP Codes should be unique (many ZIP Codes to one ZCTA relationship)\n",
+    "zip_to_zcta_df['ZIP_CODE'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Removing any duplicated ZIP Codes\n",
+    "zip_to_zcta_df.drop_duplicates(subset =\"ZIP_CODE\", keep = 'first', inplace = True) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41106"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Identify any duplicated ZIP Codes as all ZIP Codes should be unique (many ZIP Codes to one ZCTA relationship)\n",
+    "zip_to_zcta_df['ZIP_CODE'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 41106 entries, 0 to 41105\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column         Non-Null Count  Dtype \n",
+      "---  ------         --------------  ----- \n",
+      " 0   ZIP_CODE       41106 non-null  object\n",
+      " 1   PO_NAME        41106 non-null  object\n",
+      " 2   STATE          41106 non-null  object\n",
+      " 3   ZIP_TYPE       41106 non-null  object\n",
+      " 4   ZCTA           41106 non-null  object\n",
+      " 5   zip_join_type  41106 non-null  object\n",
+      "dtypes: object(6)\n",
+      "memory usage: 2.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verify all columns hold the same number of records after de-duplication process\n",
+    "zip_to_zcta_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:PythonData] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-PythonData-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
