Updated ZIP/ZCTA notebook and updated restaurant notebook

--- a/02_transform_zip_zcta/02_transform_zip_zcta_tracey_kat.ipynb
+++ b/02_transform_zip_zcta/02_transform_zip_zcta_tracey_kat.ipynb
@@ -380,7 +380,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Export ZIP Code dataframe into CSV file \n",
+    "zcta_df.to_csv('zcta.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
