--- a/02_transform_restaurant/02_transform_restaurant_rouhong_kat.ipynb
+++ b/02_transform_restaurant/02_transform_restaurant_rouhong_kat.ipynb
@@ -6,23 +6,543 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# some zip-code has \"-\" xxxxx-xxx --> drop \"-\" --> keep first 5 digits\n",
+    "# some zip-code has \"-\" xxxxx-xxx --> drop \"-\" --> keep first 5 digits - DONE \n",
     "\n",
-    "# Do we need to add ids?\n",
+    "# Do we need to add ids? - To be done in SQL as part of Load\n",
     "\n",
+    "# Drop duplicates in restaurant - DONE\n",
+    "\n",
+    "# drop the irrelevant columns (only 4 columns left) - Ruohong to do\n",
+    "\n",
+    "# Get the zip, city, state into a seperate table - DONE\n",
+    "\n",
+    "# Export all files to CSV - ZIP Code one done; Riohong to do Restaurant one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dependencies\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>dateAdded</th>\n",
+       "      <th>dateUpdated</th>\n",
+       "      <th>address</th>\n",
+       "      <th>categories</th>\n",
+       "      <th>city</th>\n",
+       "      <th>country</th>\n",
+       "      <th>keys</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>name</th>\n",
+       "      <th>postalCode</th>\n",
+       "      <th>province</th>\n",
+       "      <th>sourceURLs</th>\n",
+       "      <th>websites</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AVwcmSyZIN2L1WUfmxyw</td>\n",
+       "      <td>2015-10-19T23:47:58Z</td>\n",
+       "      <td>2018-06-26T03:00:14Z</td>\n",
+       "      <td>800 N Canal Blvd</td>\n",
+       "      <td>American Restaurant and Fast Food Restaurant</td>\n",
+       "      <td>Thibodaux</td>\n",
+       "      <td>US</td>\n",
+       "      <td>us/la/thibodaux/800ncanalblvd/1780593795</td>\n",
+       "      <td>29.814697</td>\n",
+       "      <td>-90.814742</td>\n",
+       "      <td>SONIC Drive In</td>\n",
+       "      <td>70301</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>https://foursquare.com/v/sonic-drive-in/4b7361...</td>\n",
+       "      <td>https://locations.sonicdrivein.com/la/thibodau...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AVwcmSyZIN2L1WUfmxyw</td>\n",
+       "      <td>2015-10-19T23:47:58Z</td>\n",
+       "      <td>2018-06-26T03:00:14Z</td>\n",
+       "      <td>800 N Canal Blvd</td>\n",
+       "      <td>Fast Food Restaurants</td>\n",
+       "      <td>Thibodaux</td>\n",
+       "      <td>US</td>\n",
+       "      <td>us/la/thibodaux/800ncanalblvd/1780593795</td>\n",
+       "      <td>29.814697</td>\n",
+       "      <td>-90.814742</td>\n",
+       "      <td>SONIC Drive In</td>\n",
+       "      <td>70301</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>https://foursquare.com/v/sonic-drive-in/4b7361...</td>\n",
+       "      <td>https://locations.sonicdrivein.com/la/thibodau...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AVwcopQoByjofQCxgfVa</td>\n",
+       "      <td>2016-03-29T05:06:36Z</td>\n",
+       "      <td>2018-06-26T02:59:52Z</td>\n",
+       "      <td>206 Wears Valley Rd</td>\n",
+       "      <td>Fast Food Restaurant</td>\n",
+       "      <td>Pigeon Forge</td>\n",
+       "      <td>US</td>\n",
+       "      <td>us/tn/pigeonforge/206wearsvalleyrd/-864103396</td>\n",
+       "      <td>35.803788</td>\n",
+       "      <td>-83.580553</td>\n",
+       "      <td>Taco Bell</td>\n",
+       "      <td>37863</td>\n",
+       "      <td>TN</td>\n",
+       "      <td>https://www.yellowpages.com/pigeon-forge-tn/mi...</td>\n",
+       "      <td>http://www.tacobell.com,https://locations.taco...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AVweXN5RByjofQCxxilK</td>\n",
+       "      <td>2017-01-03T07:46:11Z</td>\n",
+       "      <td>2018-06-26T02:59:51Z</td>\n",
+       "      <td>3652 Parkway</td>\n",
+       "      <td>Fast Food</td>\n",
+       "      <td>Pigeon Forge</td>\n",
+       "      <td>US</td>\n",
+       "      <td>us/tn/pigeonforge/3652parkway/93075755</td>\n",
+       "      <td>35.782339</td>\n",
+       "      <td>-83.551408</td>\n",
+       "      <td>Arby's</td>\n",
+       "      <td>37863</td>\n",
+       "      <td>TN</td>\n",
+       "      <td>http://www.yellowbook.com/profile/arbys_163389...</td>\n",
+       "      <td>http://www.arbys.com,https://locations.arbys.c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AWQ6MUvo3-Khe5l_j3SG</td>\n",
+       "      <td>2018-06-26T02:59:43Z</td>\n",
+       "      <td>2018-06-26T02:59:43Z</td>\n",
+       "      <td>2118 Mt Zion Parkway</td>\n",
+       "      <td>Fast Food Restaurant</td>\n",
+       "      <td>Morrow</td>\n",
+       "      <td>US</td>\n",
+       "      <td>us/ga/morrow/2118mtzionparkway/1305117222</td>\n",
+       "      <td>33.562738</td>\n",
+       "      <td>-84.321143</td>\n",
+       "      <td>Steak 'n Shake</td>\n",
+       "      <td>30260</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>https://foursquare.com/v/steak-n-shake/4bcf77a...</td>\n",
+       "      <td>http://www.steaknshake.com/locations/23851-ste...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     id             dateAdded           dateUpdated  \\\n",
+       "0  AVwcmSyZIN2L1WUfmxyw  2015-10-19T23:47:58Z  2018-06-26T03:00:14Z   \n",
+       "1  AVwcmSyZIN2L1WUfmxyw  2015-10-19T23:47:58Z  2018-06-26T03:00:14Z   \n",
+       "2  AVwcopQoByjofQCxgfVa  2016-03-29T05:06:36Z  2018-06-26T02:59:52Z   \n",
+       "3  AVweXN5RByjofQCxxilK  2017-01-03T07:46:11Z  2018-06-26T02:59:51Z   \n",
+       "4  AWQ6MUvo3-Khe5l_j3SG  2018-06-26T02:59:43Z  2018-06-26T02:59:43Z   \n",
+       "\n",
+       "                address                                    categories  \\\n",
+       "0      800 N Canal Blvd  American Restaurant and Fast Food Restaurant   \n",
+       "1      800 N Canal Blvd                         Fast Food Restaurants   \n",
+       "2   206 Wears Valley Rd                          Fast Food Restaurant   \n",
+       "3          3652 Parkway                                     Fast Food   \n",
+       "4  2118 Mt Zion Parkway                          Fast Food Restaurant   \n",
+       "\n",
+       "           city country                                           keys  \\\n",
+       "0     Thibodaux      US       us/la/thibodaux/800ncanalblvd/1780593795   \n",
+       "1     Thibodaux      US       us/la/thibodaux/800ncanalblvd/1780593795   \n",
+       "2  Pigeon Forge      US  us/tn/pigeonforge/206wearsvalleyrd/-864103396   \n",
+       "3  Pigeon Forge      US         us/tn/pigeonforge/3652parkway/93075755   \n",
+       "4        Morrow      US      us/ga/morrow/2118mtzionparkway/1305117222   \n",
+       "\n",
+       "    latitude  longitude            name postalCode province  \\\n",
+       "0  29.814697 -90.814742  SONIC Drive In      70301       LA   \n",
+       "1  29.814697 -90.814742  SONIC Drive In      70301       LA   \n",
+       "2  35.803788 -83.580553       Taco Bell      37863       TN   \n",
+       "3  35.782339 -83.551408          Arby's      37863       TN   \n",
+       "4  33.562738 -84.321143  Steak 'n Shake      30260       GA   \n",
+       "\n",
+       "                                          sourceURLs  \\\n",
+       "0  https://foursquare.com/v/sonic-drive-in/4b7361...   \n",
+       "1  https://foursquare.com/v/sonic-drive-in/4b7361...   \n",
+       "2  https://www.yellowpages.com/pigeon-forge-tn/mi...   \n",
+       "3  http://www.yellowbook.com/profile/arbys_163389...   \n",
+       "4  https://foursquare.com/v/steak-n-shake/4bcf77a...   \n",
+       "\n",
+       "                                            websites  \n",
+       "0  https://locations.sonicdrivein.com/la/thibodau...  \n",
+       "1  https://locations.sonicdrivein.com/la/thibodau...  \n",
+       "2  http://www.tacobell.com,https://locations.taco...  \n",
+       "3  http://www.arbys.com,https://locations.arbys.c...  \n",
+       "4  http://www.steaknshake.com/locations/23851-ste...  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_file_one = \"../00_input/datafiniti-fast-food-restaurants-across-america/Datafiniti_Fast_Food_Restaurants.csv\"\n",
+    "restaurant_df = pd.read_csv(csv_file_one)\n",
+    "restaurant_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10000 entries, 0 to 9999\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   id           10000 non-null  object \n",
+      " 1   dateAdded    10000 non-null  object \n",
+      " 2   dateUpdated  10000 non-null  object \n",
+      " 3   address      10000 non-null  object \n",
+      " 4   categories   10000 non-null  object \n",
+      " 5   city         10000 non-null  object \n",
+      " 6   country      10000 non-null  object \n",
+      " 7   keys         10000 non-null  object \n",
+      " 8   latitude     10000 non-null  float64\n",
+      " 9   longitude    10000 non-null  float64\n",
+      " 10  name         10000 non-null  object \n",
+      " 11  postalCode   10000 non-null  object \n",
+      " 12  province     10000 non-null  object \n",
+      " 13  sourceURLs   10000 non-null  object \n",
+      " 14  websites     10000 non-null  object \n",
+      "dtypes: float64(2), object(13)\n",
+      "memory usage: 1.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking Restaurant DF\n",
+    "restaurant_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Drop duplicates in restaurant\n",
-    "\n",
-    "# drop the irrelevant columns (only 4 columns left)\n",
-    "\n",
-    "# Get the zip, city, state into a seperate table"
+    "restaurant_df.drop_duplicates(subset =\"keys\", keep = 'first', inplace = True) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 9343 entries, 0 to 9999\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   id           9343 non-null   object \n",
+      " 1   dateAdded    9343 non-null   object \n",
+      " 2   dateUpdated  9343 non-null   object \n",
+      " 3   address      9343 non-null   object \n",
+      " 4   categories   9343 non-null   object \n",
+      " 5   city         9343 non-null   object \n",
+      " 6   country      9343 non-null   object \n",
+      " 7   keys         9343 non-null   object \n",
+      " 8   latitude     9343 non-null   float64\n",
+      " 9   longitude    9343 non-null   float64\n",
+      " 10  name         9343 non-null   object \n",
+      " 11  postalCode   9343 non-null   object \n",
+      " 12  province     9343 non-null   object \n",
+      " 13  sourceURLs   9343 non-null   object \n",
+      " 14  websites     9343 non-null   object \n",
+      "dtypes: float64(2), object(13)\n",
+      "memory usage: 1.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "restaurant_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cleanse ZIP Code to retain only 5 characters\n",
+    "restaurant_df[\"postalCode\"] = restaurant_df[\"postalCode\"].apply(lambda x: x.split(\"-\")[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verify ZIP Codes all cleansed to 5 characters only\n",
+    "restaurant_df['zip_check'] = restaurant_df['postalCode'].apply(len)\n",
+    "print(restaurant_df['zip_check'].max(), restaurant_df['zip_check'].min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>dateAdded</th>\n",
+       "      <th>dateUpdated</th>\n",
+       "      <th>address</th>\n",
+       "      <th>categories</th>\n",
+       "      <th>city</th>\n",
+       "      <th>country</th>\n",
+       "      <th>keys</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>name</th>\n",
+       "      <th>postalCode</th>\n",
+       "      <th>province</th>\n",
+       "      <th>sourceURLs</th>\n",
+       "      <th>websites</th>\n",
+       "      <th>zip_check</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5675</th>\n",
+       "      <td>AWOnnZGLRxPSIh2Ru31g</td>\n",
+       "      <td>2018-05-28T16:28:34Z</td>\n",
+       "      <td>2018-05-28T16:28:34Z</td>\n",
+       "      <td>3340 Mall Loop Dr Louis Joliet Mall Louis Joli...</td>\n",
+       "      <td>Fast Food Restaurant</td>\n",
+       "      <td>Joliet</td>\n",
+       "      <td>US</td>\n",
+       "      <td>us/il/joliet/3340mallloopdrlouisjolietmallloui...</td>\n",
+       "      <td>41.575031</td>\n",
+       "      <td>-88.156167</td>\n",
+       "      <td>KFC</td>\n",
+       "      <td>60431</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>https://foursquare.com/v/kfc/4bc8a87692b376b09...</td>\n",
+       "      <td>http://www.kfc.com</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        id             dateAdded           dateUpdated  \\\n",
+       "5675  AWOnnZGLRxPSIh2Ru31g  2018-05-28T16:28:34Z  2018-05-28T16:28:34Z   \n",
+       "\n",
+       "                                                address            categories  \\\n",
+       "5675  3340 Mall Loop Dr Louis Joliet Mall Louis Joli...  Fast Food Restaurant   \n",
+       "\n",
+       "        city country                                               keys  \\\n",
+       "5675  Joliet      US  us/il/joliet/3340mallloopdrlouisjolietmallloui...   \n",
+       "\n",
+       "       latitude  longitude name postalCode province  \\\n",
+       "5675  41.575031 -88.156167  KFC      60431       IL   \n",
+       "\n",
+       "                                             sourceURLs            websites  \\\n",
+       "5675  https://foursquare.com/v/kfc/4bc8a87692b376b09...  http://www.kfc.com   \n",
+       "\n",
+       "      zip_check  \n",
+       "5675          6  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Identify row where ZIP Code is 6 characters long\n",
+    "restaurant_df.loc[restaurant_df['zip_check'] == 6]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There appears to be a hidden character resulting in the count equally to 6. It would appear that by splitting the \"-\", a space has been left after 1. This will be cleansed and tidied up as part of the load process into Postgres SQL if not remove during the de-duplication process."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract ZIP Code, City and State to a separate table\n",
+    "zip_code_df = restaurant_df[['postalCode','city','province']]\n",
+    "zip_code_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rename ZIP Code table column headings so they are more user friendly\n",
+    "zip_code_df = zip_code_df.rename(columns={\"postalCode\":\"zip_code\", \"province\":\"state\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check renamed columns\n",
+    "zip_code_df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Identify if there are any duplicate ZIP Codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_code_df[\"zip_code\"].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop duplicate ZIP Codes from the ZIP Code dataframe\n",
+    "zip_code_df.drop_duplicates(subset ='zip_code', keep = 'first', inplace=True) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_code_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export ZIP Code dataframe into CSV file \n",
+    "zip_code_df.to_csv('zip_code.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop unnecessary columsn from resturant dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export restaurant data to CSV"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:PythonData] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-PythonData-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
